--- a/gen/templates/mockgo.tmpl
+++ b/gen/templates/mockgo.tmpl
@@ -5,5 +5,5 @@ package kivikmock
 import "time"
 
 {{ range $method := . -}}
-{{template "expectedtype.tmpl" $method}}
-{{- end }}
+{{ template "expectedtype.tmpl" $method -}}
+{{- end -}}
