--- a/gen/templates/drivermethod.tmpl
+++ b/gen/templates/drivermethod.tmpl
@@ -1,6 +1,6 @@
 func (c *driverClient) {{ .Name }}({{ .DriverArgs }}) {{ .ReturnArgs }} {
 	expected := &Expected{{ .Name }}{
-{{ .Variables 2 }}
+{{ .InputVariables 2 }}
 	}
 	if err := c.nextExpectation(expected); err != nil {
 		return {{ .ZeroReturns }}
