--- a/gen/templates/mock.go.tmpl
+++ b/gen/templates/mock.go.tmpl
@@ -1,3 +1,7 @@
 package kivikmock
 
-import ()
+import "context"
+
+{{ range $method := . -}}
+{{ template "drivermethod.tmpl" $method }}
+{{ end -}}
