Auto-generate the mock methods now, too

--- a/gen/templates/mock.go.tmpl
+++ b/gen/templates/mock.go.tmpl
@@ -2,8 +2,10 @@
 
 package kivikmock
 
-import "context"
+import "github.com/go-kivik/kivik"
+
+var _ = kivik.EndKeySuffix // To ensure a reference to kivik package
 
 {{ range $method := . -}}
-{{ template "drivermethod.tmpl" $method }}
-{{ end -}}
+{{ template "mockmethod.tmpl" $method -}}
+{{- end -}}
