--- a/gen/templates/drivermethod.tmpl
+++ b/gen/templates/drivermethod.tmpl
@@ -1,6 +1,6 @@
 func ({{if .DBMethod}}db *driverDB{{else}}c *driverClient{{end}}) {{ .Name }}({{ .DriverArgs }}) {{ .ReturnArgs }} {
 	expected := &Expected{{ .Name }}{
-{{ .InputVariables 2 }}
+{{ .InputVariables }}
 	}
 	if err := {{if .DBMethod}}db.client{{else}}c{{end}}.nextExpectation(expected); err != nil {
 		return {{ .ZeroReturns }}
