Automate the client.DB() expectation

--- a/gen/templates/drivermethod.tmpl
+++ b/gen/templates/drivermethod.tmpl
@@ -5,5 +5,8 @@ func ({{if .DBMethod}}db *driverDB{{else}}c *driverClient{{end}}) {{ .Name }}({{
 	if err := {{if .DBMethod}}db.client{{else}}c{{end}}.nextExpectation(expected); err != nil {
 		return {{ .ZeroReturns }}
 	}
+{{- if eq .Name "DB" }}
+expected.ret0.name = arg0
+{{- end }}
 	return {{ .ExpectedReturns }}
 }
