--- a/gen/templates/drivermethod.tmpl
+++ b/gen/templates/drivermethod.tmpl
@@ -6,7 +6,9 @@ func ({{if .DBMethod}}db *driverDB{{else}}c *driverClient{{end}}) {{ .Name }}({{
 		return {{ .ZeroReturns }}
 	}
 {{- if eq .Name "DB" }}
+expected.ret0.mu.Lock()
 expected.ret0.name = arg0
+expected.ret0.mu.Unlock()
 {{- end }}
     if expected.callback != nil {
 		return expected.callback({{.CallbackArgs}})
